deployment/dev/kuard/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kuard.localdev.me
    secretName: kuard-tls-secret
  rules:
  - host: kuard.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
